--- a/index.html
+++ b/index.html
@@ -11,57 +11,32 @@
 </head>
 
 <body>
-    <header class="default-header">
-        <nav class="navbar navbar-default" role="navigation">
-            <div class="container">
-                <div class="navbar-header d-flex items-center">
-                    <button type="button" class="navbar-toggle d-none" data-toggle="collapse" data-target="#navbar-collapsible">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        </button>
-                    <a href="#" class="site-logo">
-                        <svg width="50" height="40" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
-                        <path fill="#000000" d="M120.12 208.29c-3.88-2.9-7.77-4.35-11.65-4.35H91.03v104.47h17.45c3.88 0 7.77-1.45 11.65-4.35 3.88-2.9 5.82-7.25 5.82-13.06v-69.65c-.01-5.8-1.96-10.16-5.83-13.06zM404.1 32H43.9C19.7 32 .06 51.59 0 75.8v360.4C.06 460.41 19.7 480 43.9 480h360.2c24.21 0 43.84-19.59 43.9-43.8V75.8c-.06-24.21-19.7-43.8-43.9-43.8zM154.2 291.19c0 18.81-11.61 47.31-48.36 47.25h-46.4V172.98h47.38c35.44 0 47.36 28.46 47.37 47.28l.01 70.93zm100.68-88.66H201.6v38.42h32.57v29.57H201.6v38.41h53.29v29.57h-62.18c-11.16.29-20.44-8.53-20.72-19.69V193.7c-.27-11.15 8.56-20.41 19.71-20.69h63.19l-.01 29.52zm103.64 115.29c-13.2 30.75-36.85 24.63-47.44 0l-38.53-144.8h32.57l29.71 113.72 29.57-113.72h32.58l-38.46 144.8z"></path>
-                    </svg>
-                    </a>
-                    <div class="crayons-header--search js-search-form w-75">
-                        <form class="navbar-form">
-                            <input type="text" placeholder="Search..." class="form-control input-search">
-                            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-
-                        </form>
-                    </div>
-                    <div class="navbar-collapse collapse" id="navbar-collapsible">
-                        <ul class="nav navbar-nav navbar-left">
-                            <li><a href="#">Link 1</a></li>
-                            <li><a href="#">Link 2</a></li>
-                        </ul>
-
-                        <div class="navbar-form navbar-right btn-group">
-
-                            <button type="button" class="btn btn-default">Button 2</button>
-                            <button type="button" class="btn btn-default">Button 3</button>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="d-flex items-center h-100 ml-auto">
-                    <a type="button " class="btn btn-link login-button hidden ml-auto whitespace-nowrap ">Login</a>
-                    <a type="button " class="btn btn-default blue-button ">create account</a>
-                </div>
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <a class="navbar-brand" href="#">Navbar</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-2">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    </li>
+                </ul>
+                <form class="form-inline my-2 my-lg-2" <input class="form-control mr-sm-2" type="search" placeholder="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
             </div>
         </nav>
     </header>
-    <div class="container " style=" ">
-        <div class="row ">
-            <aside class="sidebar-leftd-sm-none col-md-3 col-lg-3 contenedor-principal ">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officiis aspernatur temporibus repudiandae labore cupiditate soluta in amet. Quis cum, laudantium quibusdam ut, repellendus inventore iste voluptatum, commodi debitis cupiditate mollitia.
-            </aside>
-            <main class="articles-list col-xs-12 col-md-9 col-lg-6 ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio qui saepe nihil molestias voluptates libero sequi corporis perferendis eveniet enim id, facilis, dignissimos at laborum dicta ea earum voluptatem facere?</main>
-            <aside class="sidebar-right d-sm-block col-md-hidden col-lg-3 ">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto, quam dicta. Qui, doloribus temporibus, excepturi exercitationem sequi iure hic eius asperiores veniam accusamus necessitatibus modi atque facere corporis. Quibusdam, facere!</aside>
-        </div>
-    </div>
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js " integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj " crossorigin="anonymous "></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js " integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns " crossorigin="anonymous "></script>
 </body>
